--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "inet-whois",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "whois parser for many TLDs, cc TLDs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/thesunbg/inet-whois"
   },
   "keywords": [
     "whois",
